Coneccion a la base de datos mas muestra de imagenes

--- a/TiendaGrupo15Progra3/TiendaGrupo15Progra3.csproj
+++ b/TiendaGrupo15Progra3/TiendaGrupo15Progra3.csproj
@@ -75,7 +75,7 @@
     <Content Include="WebForm1.aspx" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="aaaa.cs" />
+    <Compile Include="conexion\ConexionSql.cs" />
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -100,6 +100,7 @@
     <Compile Include="IngresaTusDatos.aspx.designer.cs">
       <DependentUpon>IngresaTusDatos.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Models\Premio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Site1.Master.cs">
       <DependentUpon>Site1.Master</DependentUpon>
@@ -129,7 +130,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
