Separacion del proyecto en capas,agregado clase cliente y voucher y agregado funcion validar, modificacion master page

--- a/TiendaGrupo15Progra3/TiendaGrupo15Progra3.csproj
+++ b/TiendaGrupo15Progra3/TiendaGrupo15Progra3.csproj
@@ -131,6 +131,7 @@
     <Compile Include="Site1.Master.designer.cs">
       <DependentUpon>Site1.Master</DependentUpon>
     </Compile>
+    <Compile Include="Validacion.cs" />
     <Compile Include="WebForm1.aspx.cs">
       <DependentUpon>WebForm1.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -174,6 +175,16 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\tp-winform-equipo-15A\Dominio\Dominio.csproj">
+      <Project>{bc14f037-0434-4f95-af3a-b765252a5f25}</Project>
+      <Name>Dominio</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\tp-winform-equipo-15A\Negocio\Negocio.csproj">
+      <Project>{4d1a659b-a6ec-43bb-90bb-c4d007d71d87}</Project>
+      <Name>Negocio</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
