--- a/Negocio/Negocio.csproj
+++ b/Negocio/Negocio.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7A853E68-88BB-4B23-9922-05429EFD6861}</ProjectGuid>
+    <ProjectGuid>{9DA292B8-BD1F-48DD-88CD-72D25C038C1D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Dominio</RootNamespace>
-    <AssemblyName>Dominio</AssemblyName>
+    <RootNamespace>Negocio</RootNamespace>
+    <AssemblyName>Negocio</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -41,13 +41,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Articulo.cs" />
-    <Compile Include="Categoria.cs" />
-    <Compile Include="Cliente.cs" />
-    <Compile Include="Imagen.cs" />
-    <Compile Include="Marca.cs" />
+    <Compile Include="AccesoDatos.cs" />
+    <Compile Include="ArticuloService.cs" />
+    <Compile Include="ClienteService.cs" />
+    <Compile Include="ImagenService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Voucher.cs" />
+    <Compile Include="VoucherService.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Dominio\Dominio.csproj">
+      <Project>{7a853e68-88bb-4b23-9922-05429efd6861}</Project>
+      <Name>Dominio</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
