--- a/TiendaGrupo15Progra3/TiendaGrupo15Progra3.csproj
+++ b/TiendaGrupo15Progra3/TiendaGrupo15Progra3.csproj
@@ -84,9 +84,7 @@
     <Content Include="Content\bootstrap.rtl.css" />
     <Content Include="Content\bootstrap.rtl.min.css" />
     <Content Include="Default.aspx" />
-    <Content Include="DNIexistente.aspx" />
     <Content Include="ElijeTuPremio.aspx" />
-    <Content Include="Exito.aspx" />
     <Content Include="Global.asax" />
     <Content Include="IngresaTusDatos.aspx" />
     <Content Include="Scripts\bootstrap.bundle.js" />
@@ -95,6 +93,7 @@
     <Content Include="Scripts\bootstrap.esm.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="UsuarioRegistrado.aspx" />
     <Content Include="Web.config" />
     <Content Include="WebForm1.aspx" />
   </ItemGroup>
@@ -106,26 +105,12 @@
     <Compile Include="Default.aspx.designer.cs">
       <DependentUpon>Default.aspx</DependentUpon>
     </Compile>
-    <Compile Include="DNIexistente.aspx.cs">
-      <DependentUpon>DNIexistente.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="DNIexistente.aspx.designer.cs">
-      <DependentUpon>DNIexistente.aspx</DependentUpon>
-    </Compile>
     <Compile Include="ElijeTuPremio.aspx.cs">
       <DependentUpon>ElijeTuPremio.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="ElijeTuPremio.aspx.designer.cs">
       <DependentUpon>ElijeTuPremio.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Exito.aspx.cs">
-      <DependentUpon>Exito.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Exito.aspx.designer.cs">
-      <DependentUpon>Exito.aspx</DependentUpon>
     </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -137,7 +122,6 @@
     <Compile Include="IngresaTusDatos.aspx.designer.cs">
       <DependentUpon>IngresaTusDatos.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Models\Premio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Site1.Master.cs">
       <DependentUpon>Site1.Master</DependentUpon>
@@ -145,6 +129,13 @@
     </Compile>
     <Compile Include="Site1.Master.designer.cs">
       <DependentUpon>Site1.Master</DependentUpon>
+    </Compile>
+    <Compile Include="UsuarioRegistrado.aspx.cs">
+      <DependentUpon>UsuarioRegistrado.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="UsuarioRegistrado.aspx.designer.cs">
+      <DependentUpon>UsuarioRegistrado.aspx</DependentUpon>
     </Compile>
     <Compile Include="WebForm1.aspx.cs">
       <DependentUpon>WebForm1.aspx</DependentUpon>
