--- a/Negocio/Negocio.csproj
+++ b/Negocio/Negocio.csproj
@@ -46,6 +46,7 @@
     <Compile Include="ClienteService.cs" />
     <Compile Include="ImagenService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UsuarioService.cs" />
     <Compile Include="VoucherService.cs" />
   </ItemGroup>
   <ItemGroup>
